update configs for websocket receive